data/src/main/java/com/example/data/network/error/IncorrectTokenException.kt
package com.example.data.network.error

class IncorrectTokenException: RuntimeException()